WAVE testing (web accessibility evaluation tool) fix: social links don't have text (a elements), added aria-label attributes for screen reader users. Also fixed all contrast errors on the main page (index.html)

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -4,8 +4,8 @@
 
 // Primary Colors
 $primary-black: rgb(43, 43, 43);
-$primary-grey: #838383;
-$primary-color: #cf8d9a;
+$primary-grey: #707070;
+$primary-color: #b97e8a;
 // Secondary Colors
 $of-grey: #f4f4f4;
 $of-pink: #fff0f0;
