--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -9,17 +9,18 @@
 
   .footer-logo {
     font-family: $logo-font;
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   &__contacts {
     display: flex;
     align-items: center;
     height: 1rem;
-    margin-bottom: 0.6rem;
+    margin-bottom: 0.8rem;
 
     &-email {
-      color: $primary-color;
+      font-size: 1.1rem;
+      color: $dark-pink;
       text-decoration: none;
     }
 
@@ -31,8 +32,34 @@
     }
 
     &-mobile {
-      color: $primary-color;
+      font-size: 1.1rem;
+      color: $dark-pink;
       text-decoration: none;
+    }
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .footer {
+    .footer-logo {
+      font-family: $logo-font;
+      font-size: 3rem;
+    }
+
+    &__contacts {
+      margin-bottom: 1rem;
+
+      &-email {
+        font-size: 1.3rem;
+      }
+
+      &-divider {
+        margin: 0 0.8rem;
+      }
+
+      &-mobile {
+        font-size: 1.3rem;
+      }
     }
   }
 }
