--- a/scss/components/_main-home.scss
+++ b/scss/components/_main-home.scss
@@ -49,7 +49,7 @@
     &__cta {
       background-color: $primary-color;
       color: #fff;
-      font-size: 1.4rem;
+      font-size: 1.5rem;
       border-radius: 5px;
       width: 40%;
       height: 3rem;
@@ -157,7 +157,7 @@
       }
 
       &__cta {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
         border-radius: 10px;
         width: 30%;
         height: 4rem;
@@ -166,6 +166,10 @@
 
         &:hover {
           background-color: $light-pink;
+        }
+
+        &:focus {
+          outline: 1px solid $dark-pink;
         }
       }
 
@@ -246,7 +250,7 @@
 
       &__cta {
         transform: translateX(130%);
-        font-size: 1.6rem;
+        font-size: 1.5rem;
         width: 12%;
         height: 4rem;
         margin-bottom: 3rem;
